k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hono-api
  namespace: default
spec:
  selector:
    app: hono-api
  ports:
    - port: 80
      targetPort: 5544
