k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hono-api
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: api.jobberjobs.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hono-api
                port:
                  number: 80
